--- a/Blogg/Blogg.csproj
+++ b/Blogg/Blogg.csproj
@@ -184,6 +184,9 @@
     <Content Include="icons\appbar.delete.rest.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="icons\blogger.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="oldPanorama.txt" />
     <Content Include="SplashScreenImage.jpg" />
     <Content Include="icons\appbar.add.rest.png">
