--- a/Blogg/Blogg.csproj
+++ b/Blogg/Blogg.csproj
@@ -66,6 +66,12 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\RestSharp.104.1\lib\sl4-wp71\RestSharp.WindowsPhone.dll</HintPath>
     </Reference>
+    <Reference Include="samples_AsyncCtpLibrary">
+      <HintPath>..\..\..\Visual Studio 2010\samples_AsyncCtpLibrary.dll</HintPath>
+    </Reference>
+    <Reference Include="samples_AsyncCtpLibrary_Phone">
+      <HintPath>..\..\..\Visual Studio 2010\samples_AsyncCtpLibrary_Phone.dll</HintPath>
+    </Reference>
     <Reference Include="System.Servicemodel" />
     <Reference Include="System.Servicemodel.Web" />
     <Reference Include="System.Windows" />
