--- a/Blogg/packages.config
+++ b/Blogg/packages.config
@@ -3,4 +3,5 @@
   <package id="HtmlAgilityPack" version="1.4.6" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="wp71" />
   <package id="RestSharp" version="104.1" targetFramework="wp71" />
+  <package id="WPtoolkit" version="4.2013.08.16" targetFramework="sl40-wp71" />
 </packages>
